# s06-26-nc-equipo-69-b2g

./: .gitignore  README.md  mcp.example.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: backend-ci.yml  ci.yml
backend/: .dockerignore  .env.example  .env.example.prod  .gitignore  .npmrc  Dockerfile  Dockerfile.prod  README.md  eslint.config.js  package-lock.json  package.json  render.yaml  vitest.config.js
backend/scripts/: ingest-equipamentos-publicos.js  prisma-generate-if-models.js
backend/src/: app.js  server.js
docs/: CONTIBUTING.md  CONTRIBUTING.md  Prompt_IA.md  deploy.md  frontend-mapa-integracion.md  mcp.md  workflow.md
docs/specs/: README.md  (+2 more)
etl-pipeline/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
etl-pipeline/etl/: clean.py  cluster_names.py  config.py  database.py  files.py  loaders.py  mobilidade.py  models.py  pipeline.py  schemas.py  score.py  utils.py
etl-pipeline/migrations/: env.py
etl-pipeline/migrations/versions/: 001_create_concentracao.py  002_create_antenas.py  003_change_download_upload_to_bigint.py  004_normalize_concentracao_3fn.py
etl-pipeline/scripts/: copy_vectors.py  diag_conn.py  load_vectors_nemotron.py  run_etl.py
etl-pipeline/tests/: test_loaders.py  test_mobilidade.py  test_pipeline.py  test_score.py
frontend/: README.md  components.json  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  vercel.json
(+171 files in other folders)
