[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "appbit-etl"
version = "0.1.0"
description = "ETL pipeline para ingesta del dataset Visent CDRView a Supabase/PostgreSQL"
authors = [{ name = "App BiT Hackathon" }]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "typer>=0.9.0",
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
etl-run = "scripts.run_etl:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
